# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  sqlx-data.json
configuration/: base.yaml  local.yaml
migrations/: 20211028071328_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  routes.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
