[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.0.0-beta.11"
actix-rt = "2.3.0"
actix-web = "4.0.0-beta.10"
reqwest = "0.11.6"
serde = "1.0.130"
tokio = "1.12.0"
config = "0.11.0"

[dependencies.sqlx]
version = "0.5.9"
defatult-features = false
features = [
        "runtime-actix-rustls",
        "macros",
        "postgres",
        "uuid",
        "chrono",
        "migrate"
]
