[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.0.0-beta.11"
actix-rt = "2.3.0"
actix-web = "4.0.0-beta.10"
reqwest = "0.11.6"
serde = "1.0.130"
tokio = "1.12.0"
config = "0.11.0"
chrono = "0.4.19"
uuid = {version="0.8.2" , features = ["v4"]}
env_logger = "0.9.0"
log = "0.4.14"
tracing = { version="0.1.29", features = ["log"]}
tracing-futures = "0.2.5"
tracing-subscriber = { version ="0.2.25", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
once_cell = "1.8.0"
tracing-actix-web = "0.4.0-beta.12"


[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
        "runtime-actix-rustls",
        "macros",
        "postgres",
        "uuid",
        "chrono",
        "migrate",
        "offline"
]
